style(css): remove fixed height to prevent h1 overflow in .game-header
Eliminated fixed height to address overflow issues with the h1 element.

--- a/styles/game-styles.css
+++ b/styles/game-styles.css
@@ -25,7 +25,6 @@ body {
     display: flex;
     justify-content: space-between;
     width: 700px;
-    height: 100px;
     margin-top: 48px;
     font-family: 'BarlowSemiCondensed-Bold';
     border: 2px solid #b9b8c262;
